--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -245,6 +245,12 @@
             <p class="projectText">Text-based Dungeon Crawler game made with Python 3. Hosted on repl.it. Try to find the key and escape the Dungeon.</p>
             <a class="projectButtonLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
+          <div class="projectBox python fullstack javascript">
+            <a class="projectLink" href="https://github.com/Inc0mple/GoogleNewsSentimentFlask" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/WebappScreenshot.JPG"></img></a>
+            <h3 class="projectTitle">GoogleNews Sentiment Analysis</h3>
+            <p class="projectText">A work-in-progress data analysis project to analyse and compare news sentiment trends. Currently must be forked and ran locally.</p>
+            <a class="projectButtonLink" href="https://github.com/Inc0mple/GoogleNewsSentimentFlask"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+          </div>
         </div>
       </div>
     </section>                      
