--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -43,7 +43,7 @@
           be referred here for a look at my portfolio. Since you are already here anyway, might as well
           take a look at my stuff. This site
           showcases projects done thus far in my path towards achieving
-          proficiency in Technology (and a passable grasp of Design).
+          proficiency in Technology and Design.
         </p>
       </div>
     </section>
