--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -243,7 +243,7 @@
             <a class="projectLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/dungeonCrawlBackground.png"></img></a>
             <h3 class="projectTitle">Dungeon Crawler</h3>
             <p class="projectText">Text-based Dungeon Crawler game made with Python 3. Hosted on repl.it. Try to find the key and escape the Dungeon.</p>
-            <a class="projectButtonLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+            <a class="projectButtonLink" href="https://repl.it/@BryanTan3/DungeonCrawler1DProject"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox python fullstack javascript">
             <a class="projectLink" href="https://github.com/Inc0mple/GoogleNewsSentimentFlask" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/WebappScreenshot.JPG"></img></a>
