--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -114,7 +114,7 @@
             <a class="iconLink" href="https://www.adobe.com/sea/products/illustrator.html" target="_blank"><img class="skillsIcon" src="assets/adobeillustrator.png"></img></a>
           </div>
           <p class="skillsDescription">
-            As my preferred IDE, VS Code has been used for all projects done
+            As my preferred code editor, VS Code has been used for all projects done
             after my transition from Code Pen, during which I learnt the basics
             of Git and GitHub. I have used Microsoft Office software extensively
             in the past, and have picked up on Adobe Creative Cloud
