--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -132,12 +132,16 @@
         <div id="filterDiv">
           <button id="showall" onclick="filterProjectBox('showall')" class="filterButton activeFilter">Show All</button>
           <button id="python" onclick="filterProjectBox('python')" class="filterButton">Python</button>
+          <button id="javascript" onclick="filterProjectBox('javascript')" class="filterButton">JavaScript</button>
+          <button id="csharp" onclick="filterProjectBox('csharp')" class="filterButton">C#</button>
+          <button id="frontend" onclick="filterProjectBox('frontend')" class="filterButton">Frontend</button>
+          <button id="backend" onclick="filterProjectBox('backend')" class="filterButton">Backend</button>
           <button id="ai" onclick="filterProjectBox('ai')" class="filterButton">Artifical Intelligence</button>
           <button id="cloud" onclick="filterProjectBox('cloud')" class="filterButton">Cloud</button>
           <button id="nlp" onclick="filterProjectBox('nlp')" class="filterButton">Natural Language Processing</button>
           <button id="cv" onclick="filterProjectBox('cv')" class="filterButton">Computer Vision</button>
           <button id="research" onclick="filterProjectBox('research')" class="filterButton">Research</button>
-          <button id="javascript" onclick="filterProjectBox('javascript')" class="filterButton">JavaScript</button>
+          <button id="game" onclick="filterProjectBox('game')" class="filterButton">Game</button>
           <button id="python" onclick="filterProjectBox('research')" class="filterButton">Research</button>
           <button id="react" onclick="filterProjectBox('react')" class="filterButton">React</button>
           <button id="mongodb" onclick="filterProjectBox('mongodb')" class="filterButton">MongoDB</button>
@@ -156,7 +160,7 @@
             <p class="projectText">Telegram Bot that analyses a given text and returns the top 5 emotions evoked. Utilises HuggingFace inference API.</p>
             <a class="projectButtonLink" href="https://github.com/Inc0mple/emo-tele-bot"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
-          <div class="projectBox streamlit ai python cv">
+          <div class="projectBox streamlit backend frontend ai python cv">
             <a class="projectLink" href="https://github.com/Inc0mple/smarteye_app" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/healtheye.png"></img></a>
             <h3 class="projectTitle">SmartEye/HealthEye</h3>
             <p class="projectText">Streamlit webapp. Uses device's cameras to perform CV tasks such as fall detection, pose estimation and sign-language recognition.</p>
@@ -174,7 +178,7 @@
             <p class="projectText">Extracted useful metrics from unlabeled video datasets using Pandas, Seaborn, YOLOv5 and DeepLabV3.</p>
             <a class="projectButtonLink" href="https://www.linkedin.com/in/incomple/overlay/1635486106043/single-media-viewer/"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
-          <div class="projectBox hardware ai python cv">
+          <div class="projectBox backend ai python cv">
             <a class="projectLink" href="https://drive.google.com/file/d/1JGCuGIx05fgDsGYyrR-0iSYMJmlcZSuV/view?usp=sharing" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/dti.png"></img></a>
             <h3 class="projectTitle">Helios: CV with RPi 3 </h3>
             <p class="projectText">Tech Lead for project utilising RPi 3 and CV to count people and perform social distancing using a novel light fixture.</p>
@@ -186,13 +190,13 @@
             <p class="projectText">Developed Feed page and performed testing for SAGE Experiences, an online knowledge-sharing platform built using the MERN stack.</p>
             <a class="projectButtonLink" href="https://www.linkedin.com/posts/ivanfengjk_sage-sharing-and-gaining-experiences-activity-6968778969626152960-ZVFu?utm_source=share&utm_medium=member_desktop"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
-          <div class="projectBox python">
+          <div class="projectBox game python">
             <a class="projectLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/dungeonCrawlBackground.png"></img></a>
             <h3 class="projectTitle">Dungeon Crawler</h3>
             <p class="projectText">Text-based Dungeon Crawler game made with Python 3. Hosted on repl.it. Try to find the key and escape the Dungeon.</p>
             <a class="projectButtonLink" href="https://repl.it/@BryanTan3/DungeonCrawler1DProject"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
-          <div class="projectBox backend ai python cloud">
+          <div class="projectBox backend python cloud">
             <a class="projectLink" href="https://github.com/Inc0mple/emo-tele-bot" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/linkedinArticleHeader2.png"></img></a>
             <h3 class="projectTitle">MockingBot (Telegram)</h3>
             <p class="projectText">Telegram Bot that transforms a user's input text.</p>
@@ -204,11 +208,29 @@
             <p class="projectText">A work-in-progress data analysis project to analyse and compare news sentiment trends. Currently must be forked and ran locally.</p>
             <a class="projectButtonLink" href="https://github.com/Inc0mple/GoogleNewsSentimentFlask"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
-          <div class="projectBox fullstack javascript mongodb">
+          <div class="projectBox backend frontend javascript mongodb">
             <a class="projectLink" href="/exercise" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/exerciseTrackerBackground.png"></img></a>
             <h3 class="projectTitle">Exercise Tracker Demo</h3>
             <p class="projectText">A simple CRUD (Create, Read, Update, Delete) web app demo, using MongoDB.</p>
             <a class="projectButtonLink" href="/exercise"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+          </div>
+          <div class="projectBox frontend javascript ">
+            <a class="projectLink" href="/sudoku" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/chrome_LOOZCXwiZn.png"></img></a>
+            <h3 class="projectTitle">Sudoku Solver</h3>
+            <p class="projectText">Features a brute-force backtracking sudoku-solving algorithim created from scratch using Javascript.</p>
+            <a class="projectButtonLink" href="/sudoku"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+          </div>
+          <div class="projectBox game csharp python ">
+            <a class="projectLink" href="https://raw.githubusercontent.com/Inc0mple/Logos/master/game.png" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/game.png"></img></a>
+            <h3 class="projectTitle">Game as Python Teaching Tool</h3>
+            <p class="projectText">Programmed the foundations of a 2-player card game to teach Python in Unity (C#).</p>
+            <a class="projectButtonLink" href="https://raw.githubusercontent.com/Inc0mple/Logos/master/game.png"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+          </div>
+          <div class="projectBox backend frontend javascript mongodb">
+            <a class="projectLink" href="/microservices" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/microservicesBackground.png"></img></a>
+            <h3 class="projectTitle">Various Microservices</h3>
+            <p class="projectText">Shows various microservices I developed while learning back-end web technologies, from URL shortening to file uploading.</p>
+            <a class="projectButtonLink" href="/microservices"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox frontend javascript">
             <a class="projectLink" href="https://codepen.io/Incomple_/full/xxVPNqN" target="_blank"><img class="projectImg" src="https://codepen.io/Incomple_/pen/xxVPNqN/image/large.png"></img></a>
@@ -222,12 +244,6 @@
             <p class="projectText">Click on elements or use keyboard shortcuts to play the drums.</p>
             <a class="projectButtonLink" href="https://codepen.io/Incomple_/full/jOqZVaG"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
-          <div class="projectBox frontend javascript ">
-            <a class="projectLink" href="https://codepen.io/Incomple_/full/MWyrpZv" target="_blank"><img class="projectImg" src="https://codepen.io/Incomple_/pen/MWyrpZv/image/large.png"></img></a>
-            <h3 class="projectTitle">Markdown Previewer</h3>
-            <p class="projectText">Automatically converts text inputs into Markdown format.</p>
-            <a class="projectButtonLink" href="https://codepen.io/Incomple_/full/MWyrpZv"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
-          </div>
           <div class="projectBox frontend javascript">
             <a class="projectLink" href="https://codepen.io/Incomple_/full/abNqROG" target="_blank"><img class="projectImg" src="https://codepen.io/Incomple_/pen/abNqROG/image/large.png"></img></a>
             <h3 class="projectTitle">Javascript Calculator</h3>
@@ -239,6 +255,12 @@
             <h3 class="projectTitle">25 + 5 Clock</h3>
             <p class="projectText">A simple implementation of the React framework. Keeps track of your work/break time and beeps on each interval.</p>
             <a class="projectButtonLink" href="https://codepen.io/Incomple_/full/QWNmxvE"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+          </div>
+          <div class="projectBox frontend javascript ">
+            <a class="projectLink" href="https://codepen.io/Incomple_/full/MWyrpZv" target="_blank"><img class="projectImg" src="https://codepen.io/Incomple_/pen/MWyrpZv/image/large.png"></img></a>
+            <h3 class="projectTitle">Markdown Previewer</h3>
+            <p class="projectText">Automatically converts text inputs into Markdown format.</p>
+            <a class="projectButtonLink" href="https://codepen.io/Incomple_/full/MWyrpZv"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox frontend javascript viz">
             <a class="projectLink" href="https://codepen.io/Incomple_/full/zYqjgbB" target="_blank"><img class="projectImg" src="https://codepen.io/Incomple_/pen/zYqjgbB/image/large.png"></img></a>
@@ -269,18 +291,6 @@
             <h3 class="projectTitle">D3 Treemap Diagram</h3>
             <p class="projectText">Data visualisation project. Visualises the amount of money raised for different Kickstarter projects in different categories.</p>
             <a class="projectButtonLink" href="https://codepen.io/Incomple_/full/abZbwxV"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
-          </div>
-          <div class="projectBox frontend javascript ">
-            <a class="projectLink" href="/sudoku" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/chrome_LOOZCXwiZn.png"></img></a>
-            <h3 class="projectTitle">Sudoku Solver</h3>
-            <p class="projectText">Features a brute-force backtracking sudoku-solving algorithim created from scratch using Javascript.</p>
-            <a class="projectButtonLink" href="/sudoku"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
-          </div>
-          <div class="projectBox fullstack javascript mongodb">
-            <a class="projectLink" href="/microservices" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/microservicesBackground.png"></img></a>
-            <h3 class="projectTitle">Various Microservices</h3>
-            <p class="projectText">Shows various microservices I developed while learning back-end web technologies, from URL shortening to file uploading.</p>
-            <a class="projectButtonLink" href="/microservices"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
         </div>
       </div>
