removed python depedencies

--- a/views/keypoints.html
+++ b/views/keypoints.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title>Keypoints</title>
@@ -198,4 +198,4 @@
       <p id="credits">Python script modified and adapted from <a href="https://github.com/stefanopini/simple-HigherHRNet">SimpleHigherHRNet</a>, which is an implementation of the <a href="https://github.com/HRNet/HigherHRNet-Human-Pose-Estimation">HigherHRNet</a> pose estimation method. Released under MIT License.</p>
     </footer>
   </body>
-</html>
+</html> -->
