--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -148,6 +148,12 @@
           <button id="viz" onclick="filterProjectBox('viz')" class="filterButton">Data Visualisation</button>
         </div>
         <div id="projectGrid">
+          <div class="projectBox streamlit backend frontend ai python cv">
+            <a class="projectLink" href="https://github.com/Inc0mple/sygil-webui" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/streamlit%20demo.png"></img></a>
+            <h3 class="projectTitle">Speech/Text-To-Image AI Art</h3>
+            <p class="projectText">Implementation of Stable Diffusion AI art generator with simplified UI. Features automatic prompt extension, image upscaling and Speech-To-Text.</p>
+            <a class="projectButtonLink" href="https://github.com/Inc0mple/sygil-webui"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
+          </div>
           <div class="projectBox research python viz">
             <a class="projectLink" href="https://www.jacc.org/doi/abs/10.1016/S0735-1097(22)02980-1" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/abstract.png"></img></a>
             <h3 class="projectTitle">Biomedical Data Analysis</h3>
